--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&family=Poppins:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <nav>
-      <a href="/" aria-current="page">Home</a>
-    </nav>
-    <main>
-      <h1>Home page</h1>
-    </main>
+    <div class="container">
+      <header>
+        <section class="left">
+           <img src="images/kassim.JPG" alt="profile">
+        </section>
+        <section class="right">
+        </section>
+      </header>
+      <main></main>
+      <footer></footer>
+    </div>
   </body>
 </html>
