--- a/index.html
+++ b/index.html
@@ -14,10 +14,18 @@
     <div class="container">
       <header>
         <section class="left">
-           <img src="images/kassim.JPG" alt="profile">
+           <aside class="clip-path"></aside> 
+           <img src="images/kassim.JPG" class="profile">
         </section>
+        
         <section class="right">
+           <h2>Kassim Ali</h2>
+           <div>
+             <p class="intro">Frontend developer</p>
+             <p>  I'm a recent graduate seeking a front-end developer role.Combined with intuition,intelligence,sensitivity and thoroughness, I am an invaluable asset in any company. </p>
+           </div>
         </section>
+        
       </header>
       <main></main>
       <footer></footer>
